# AI_Tools_QA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  railway.toml  run_dashboard.py
docs/: ai-bug-triage-system-design.md  project-summary.md  railway-deployment.md
src/bug_triage/: __init__.py  app.py  config.py  domain.py  models.py  repository.py  schemas.py
src/bug_triage/services/: llm.py  seed.py  testgen.py  testplan.py  triage.py
src/bug_triage/static/: app.js  styles.css
src/bug_triage/templates/: dashboard.html
tests/: test_config.py  test_deployment_config.py  test_secret_hygiene.py  test_seed_service.py  test_test_generation_service.py  test_testplan_service.py  test_triage_service.py
