[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bug-triage"
version = "0.1.0"
description = "AI-assisted bug triage and test generation MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "jinja2>=3.1,<4.0",
    "openai>=1.107.0,<2.0",
    "pydantic>=2.0,<3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bug_triage = ["templates/*.html", "static/*.css", "static/*.js"]
